--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </style>
 </head>
 <body>
-    <div class="loading-text">loading...</div>
+    <div class="loading-text">
+    <img src="alt.logo.png" width="300px" height="auto"/>
+        loading...
+    </div>
 </body>
 </html>
