Updated footer image

--- a/index.html
+++ b/index.html
@@ -514,14 +514,15 @@
 <footer>
     <div style="display: flex; flex-wrap: wrap; justify-content: space-around; text-align: left; gap: 2rem;">
         <div style="flex: 1; min-width: 250px;">
-        <img src="img/ibe.white.png" alt="IBE logo" style="width: 100%; height: auto; max-width: 300px;" />
         </div>
         <div style="flex: 1; min-width: 250px; display: flex; flex-direction: column; align-items: center; gap: 1rem;">
             <!-- <img src="img/scinat.png" alt="Natural Science Museum logo" style="width: 100%; height: auto; max-width: 300px;" /> -->
+            <a href="https://www.ibe.upf-csic.es/" target="_blank">
+                <img src="img/ibe.white.png" alt="IBE logo" style="width: 100%; height: auto; max-width: 300px;" />
+            </a>
         </div>
 
         <div style="flex: 1; min-width: 250px; display: flex; justify-content: center; align-items: center;">
-            <img src="img/alt.logo.png" alt="ALT logo" style="width: 100%; height: auto; max-width: 300px;" />
         </div>
     </div>
 </footer>
