Add documentation support

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                             <a href="https://docs.google.com/spreadsheets/d/1DyBKiZdaz6YW_cAj8fbupxuaTxv33SvBV8LYF2hMD0k/edit?usp=sharing" target="_blank">Google Docs</a>
                         </div>
                     </li>
-                    <li><a href="#documentation">Documentation</a></li>
+                    <li><a href="Documentation.pdf" target ="_blank">Documentation</a></li>
                     <li>
                         <a href="#cite">How To Cite</a>
                         <div class="dropdown">
@@ -486,7 +486,7 @@
                 <div class="card">
                     <h3><i class="fas fa-file-alt"></i> Documentation</h3>
                     <p>A comprehensive user guide is available in PDF format, covering the structure of the dataset, methods used, and example use cases. Ideal for getting started and ensuring correct integration into your research.</p>
-                    <li><a href="#"><i class="fas fa-file-pdf"></i> Download (PDF)</a></li>
+                    <li><a href="Documentation.pdf" target="_blank"><i class="fas fa-file-pdf"></i> Download (PDF)</a></li>
                 </div>
                 
                 <div class="card">
